--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,3 +18,15 @@ services:
       dockerfile: docker/php/php-fpm.docker
     volumes:
       - ./:/var/www
+
+  mysql:
+    image: mysql:8.0.23
+    volumes:
+      - ./storage/docker/mysql:/var/lib/mysql
+    environment:
+      - "MYSQL_ROOT_PASSWORD=root"
+      - "MYSQL_USER=app"
+      - "MYSQL_PASSWORD=secret"
+      - "MYSQL_DATABASE=app"
+    ports:
+      - "33061:3306"
