--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         }
     },
     "scripts": {
-        "serve": "php -S localhost:8000 -t public"
+        "serve": "php -S localhost:8000 -t public",
+        "test": "vendor/bin/phpunit"
     },
     "config": {
         "process-timeout": 0
