--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "process-timeout": 0
     },
     "require": {
-        "php": "^8.0"
+        "php": "^8.0",
+        "psr/http-message": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
