--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
     "require": {
         "php": "^8.0",
         "psr/http-message": "^1.0",
-        "psr/http-factory": "^1.0"
+        "psr/http-factory": "^1.0",
+        "psr/http-server-middleware": "^1.0",
+        "psr/http-server-handler": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
