--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
         "psr/http-factory": "^1.0",
         "psr/http-server-middleware": "^1.0",
         "psr/http-server-handler": "^1.0",
-        "psr/container": "^2.0"
+        "psr/container": "^2.0",
+        "psr/log": "^1.1",
+        "monolog/monolog": "^2.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
