--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "psr/http-server-handler": "^1.0",
         "psr/container": "^2.0",
         "psr/log": "^1.1",
-        "monolog/monolog": "^2.3"
+        "monolog/monolog": "^2.3",
+        "filp/whoops": "^2.14"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
