--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "psr/container": "^2.0",
         "psr/log": "^1.1",
         "monolog/monolog": "^2.3",
-        "filp/whoops": "^2.14"
+        "filp/whoops": "^2.14",
+        "ext-memcached": "^3.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
