--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "psr/log": "^1.1",
         "monolog/monolog": "^2.3",
         "filp/whoops": "^2.14",
-        "ext-memcached": "^3.1"
+        "ext-memcached": "^3.1",
+        "ext-pdo": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
