--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,6 @@
         }
     },
     "scripts": {
-        "serve": "php -S localhost:8000 -t public",
         "test": "vendor/bin/phpunit"
     },
     "config": {
@@ -31,7 +30,7 @@
         "monolog/monolog": "^2.3",
         "filp/whoops": "^2.14",
         "ext-memcached": "^3.1",
-        "ext-pdo": "*"
+        "ext-pdo": "*",
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
