--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "monolog/monolog": "^2.3",
         "filp/whoops": "^2.14",
         "ext-memcached": "^3.1",
-        "ext-pdo": "*",
+        "ext-pdo": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
